# Binary

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE
include/binary/: binary.hpp
include/binary/detail/: common.hpp  concepts.hpp  reader.hpp  types.hpp  writer.hpp
include/binary/detail/adapters/: iterator.hpp  stream.hpp
include/examples/: common.hpp
src/examples/: iterator.cpp  iterators.cpp  range.cpp  stream.cpp  streams.cpp
